# vibe-engineering

./: .gitignore  LLM_SECOND_BRAIN_SETUP.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml  python-package.yml
agents/: cli.py  installer_core.py  kit_registry.py  merge_strategies.py  secret_policies.py
agents/kits/claude_code/: installer.py
agents/kits/claude_code/templates/claude/: CLAUDE.md  manifest.json
agents/kits/claude_code/templates/claude/agents/: db-operations-reviewer.md
agents/kits/claude_code/templates/claude/rules/: testing-and-verification.md  uncertainty-and-sources.md
agents/kits/codex/: installer.py
agents/kits/codex/templates/codex/: instructions.md  manifest.json
agents/kits/cursor/: installer.py
agents/kits/cursor/templates/cursor/: manifest.json
agents/kits/cursor/templates/cursor/rules/: 00-persona.mdc  database-and-operations.mdc  go-backend-engineering.mdc  operating-model.mdc  security-and-data-safety.mdc  testing-and-verification.mdc  uncertainty-and-sources.mdc
agents/kits/gemini/: installer.py
agents/kits/gemini/templates/gemini/: GEMINI.md  manifest.json
agents/kits/opencode/: installer.py
agents/kits/opencode/templates/opencode/: AGENTS.md  manifest.json  opencode.fragment.jsonc
agents/kits/second_brain/: installer.py
agents/kits/second_brain/templates/second_brain/: manifest.json
docs/: second-brain-setup.md
kits/claude-code/: README.md
src/vibe_engineering/: cli.py
src/vibe_engineering/agents/kits/claude_code/: installer.py
tests/: test_claude_code_installer.py  test_cli_contract.py  test_codex_installer.py  test_cursor_installer.py  test_extension_contract.py  test_gemini_installer.py  test_installer_contracts.py  test_installer_core.py  test_invalid_config_install.py  test_kit_registry.py  test_manifest_contracts.py  test_merge_strategies.py  test_opencode_installer.py  test_second_brain_installer.py
tests/fixtures/cli_help/: kits_claude_code_diff_help.txt  kits_claude_code_doctor_help.txt  kits_claude_code_help.txt  kits_claude_code_install_help.txt  kits_claude_code_uninstall_help.txt  kits_help.txt  kits_opencode_diff_help.txt  kits_opencode_doctor_help.txt  kits_opencode_help.txt  kits_opencode_install_help.txt  kits_opencode_uninstall_help.txt  kits_second_brain_diff_help.txt  kits_second_brain_doctor_help.txt  kits_second_brain_help.txt  kits_second_brain_install_help.txt  kits_second_brain_uninstall_help.txt  main_help.txt  upgrade_help.txt
(+34 files in other folders)
