[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-engineering"
version = "0.1.0"
description = "Portable engineering kits for AI coding tools."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Vibe Engineering"}]
license = {text = "MIT"}
dependencies = [
    'tomli>=1.1; python_version < "3.11"',
]

[project.scripts]
vibe = "agents.cli:main"
vibe-engineering = "agents.cli:main"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
agents = [
    "kits/claude_code/templates/**/*",
    "kits/claude_code/templates/**/**/*",
    "kits/opencode/templates/**/*",
    "kits/opencode/templates/**/**/*",
]
