[build-system]
requires = ["setuptools>=68", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-kits"
dynamic = ["version"]
description = "Portable engineering kits for AI coding tools."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Vibe Engineering"}]
license = {text = "MIT"}
dependencies = [
    'tomli>=1.1; python_version < "3.11"',
]

[project.urls]
Homepage = "https://github.com/kidboy-man/vibe-engineering"
Source = "https://github.com/kidboy-man/vibe-engineering"
Issues = "https://github.com/kidboy-man/vibe-engineering/issues"
Changelog = "https://github.com/kidboy-man/vibe-engineering/releases"

[project.scripts]
vibe = "agents.cli:main"

[tool.setuptools_scm]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
agents = ["kits/*/templates/**/*"]
